# zwipe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  REACTIVITY_LESSON.md  README.md  SECURITY.md  card_search_result.rs  clippy.toml  for_the_next_chat.md  task_list.md
deck_builder_api/: .env.example  Cargo.toml  diesel.toml
deck_builder_api/migrations/: 20250810194450_create_scryfall_cards.sql  20250810194451_create_card_profiles.sql  20250810194451_create_cards.sql  20250810194454_create_decks.sql
deck_builder_api/src/: config.rs  main.rs  schema.rs  scryfall.rs  utils.rs
zerver/: .env.example  Cargo.toml  README.md
zerver/.cargo/: config.toml
zerver/.sqlx/: query-01a45c45b9d545359f0a7409ef3613c77500347ae178cc41a33020d07dc76df6.json  query-063ad4fa7fcbf4249409a9bcc9f34887721d684607e61e554d937e2b3c6b0382.json  query-0ca642d4df8f6fbb3d23de6058986085cc0e64eefba5bd4c0333ec196ec7a54e.json  query-13ac6e66d2b7ea1ad213c6b8083f51ab40c12b71518ea6f4758d6e3bbe9eac69.json  query-13fb0045a8ceb1ffac700c46b635945cf868744a45060a424b596f0b71e9787f.json  query-1446e42da20211c29b9a07169a3f61c4e39a95b91d088778d1f180a043cc61ae.json  query-19b1c96224dbda16f852021af7b65d407a7a9d3bb47de8d81ad58197146de46e.json  query-23a4c4292957171b267a59878dd57c4a1c146ca76959aa68f1194823e29eb121.json  query-24ea33795a75c8cf5a55ee719369e1860de7e7e46cddfd4dcb02a4452c9856bf.json  query-25b33e9b94811344d305bddd30a7d2ef3690a99d284b86248526e2069726e676.json  query-26ac83e3297e22fba341884361c44f55c864655483caa34320ebee954aaff86a.json  query-2df6c86f3b9dea4ed6ff1e2609020318639cb168886115aa5e623e78443ebfa4.json  query-3223324d453f33b185731f22c3a077de2b2109ea68e14c8ad0039b42c0d8baec.json  query-3496118b31e25a020d8266f7a6377240b9f56e42ca4eb61fa52936a6ab2576c0.json  query-39f828b9455e2325f2a220576c37aab77f9750e5eb909025fc60325c92bb7d12.json  query-3e85bc806394b3d4880708bb77cddf57a0a40abdee734330deaebaafe6b923e5.json  query-44d7c7f0356fcf70c987013fee5c5c94fc56c76e67d11ceea9a9a058177f47b4.json  query-45a0c1ec9afee1832c8a44792d6a0154a5529a92ac8656ff753d62d6882e7e8b.json  query-521864ec8147c5d33708c235da77f714f0baac19fdd93dc6241c0af15ee56ea4.json  query-5266d4fd0f51d12db22f8465be7dcb0db3db1babe880a3db1cace222cc6df032.json  query-5946148ce797879c2990a4b983f108890e4db6f66171d408d15501ca40cc2772.json  query-5cbc4a2d6ab3e69bb5971c2d9fc3b3b43f44f992d1fbd826e24c781ab3cce5ab.json  query-6e15f595be153045948c0b5e3d1f1a2c79147cfb2a1ef92a458e1793e69d600c.json  query-703c7f91ef7cc5a7d2c1725c006ddc6492fc59434b187b3310c6b5f4f872fdb5.json  query-75a1013188e87b99c2230c163f1c8b4596e18240d849ea5f5786142b4c03493f.json  query-7d937a033cf86ca8155465890e8f3c074a2e4914c085f75d9d0c20f889832b82.json  query-8aecc2cb8b37f74059d9fff3c4cd7d0556d8c18fa2b7f6d5bc81e7d5179b3539.json  query-98c35349beb48821f31ca3cff008a3bc9d00d898d5ef9546a520c011ae815d1a.json  query-9c29ffb1979748ad9dfea1af5e6aea0242aa2a3b441f7f32806892da8239b573.json  query-a257e74cc52d19336def2d9adf68e35241de9184498f72fa00640d68be767228.json  query-a638114930438c601a52acca65f14519ea49bba36c30e52b494d5aad7c119a61.json  query-b26c2d786f6c08336f1da91f92d9d9b615fc2a2e8a3cba406f39b05b9513a6cf.json  query-b4bae0db9ac1dabc3651e495d4bf81ada2906b00ec51d8547aa2a34ca6e4b038.json  query-b5b7156ebb4d95bf4debb389f0797cd3e6acc2bb9c5a56e95e85be575e314274.json  query-c65d7928d0b1cb0eeea5a4994cd5776a7f6ad9ddace79ef4cf2135e624e2abcd.json  query-c956c4424eef5ae5a4e8ab865b892242ae30849b07d2dcb4f8f2f2fa1dbc5b58.json  query-d174ed17bf667d9cd0e20a37c72125299a0fbee5e457ad601395a4d0bcf44407.json  query-d4a827a1914ab229b90c4149fbce2a4b9f96aa99e895ca6baea12c3e475e05ef.json  query-d7e564e8a12a603fa31dfcb50557072f8f81e7530e18757cd79668b781552f0f.json  query-db12681f3362f4a92c265cce2da4cb5bcb5fbc83dff01f3eec50434190292c13.json  (+5 more)
zerver/migrations/: 20250810194439_create_users.sql  20250810194450_create_scryfall_cards.sql  20250810194450_create_scryfall_data.sql  20250810194451_create_card_profiles.sql  20250810194452_create_latest_cards_view.sql  20250810194454_create_decks.sql  20250810194459_create_deck_cards.sql  20250824191651_create_scryfall_card_sync_metrics.sql  20251007160206_create_refresh_tokens.sql  20260322000000_card_profiles_shared_pk.sql  20260327000001_create_email_verification_tokens.sql  20260327000002_create_password_reset_tokens.sql  20260329000000_create_user_preferences.sql  20260524000000_remove_zwipe_theme.sql  20260606120000_latest_cards_prefer_real_printings.sql  20260607211058_user_metrics.sql  20260608120000_timestamptz_tokens.sql  20260608120100_timestamptz_user.sql  20260608120200_timestamptz_decks.sql  20260608120300_timestamptz_cards.sql  20260609120000_user_last_active_first_swiped_and_signup_rename.sql  20260609130000_backfill_first_swiped.sql  20260611120000_create_synergy_tables.sql  20260611220000_add_hints_shown_to_users.sql  20260625000000_add_deck_tags.sql  20260629000000_add_deck_land_target.sql  20260629010000_add_deck_price_target.sql  20260629020000_create_commander_card_signal.sql  20260630000000_add_deck_power_level_and_other_tags.sql  20260630010000_add_latest_cards_edhrec_rank_index.sql  20260702000000_create_swipe_memory.sql  20260705120000_create_anonymous_events.sql  20260705120100_user_daily_activity_bigint.sql  20260706200000_create_card_signal_rollup.sql  20260707000000_create_commander_popularity.sql  20260708000000_add_deck_card_mvp.sql  20260709000000_add_deck_share_token.sql  20260710000000_create_commander_select_signal.sql  20260711000000_add_refresh_token_platform.sql  20260712000000_create_oracle_tags.sql  (+7 more)
zerver/tests/: archidekt_import.rs  auth_edges.rs  auth_flows.rs  auth_session_version.rs  card_filter_parity.rs  card_metadata.rs  card_serving.rs  catalog_flows.rs  health.rs  (+10 more)
zite/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs
zweb/: Cargo.toml  Dioxus.toml  README.md
zwipe/: Cargo.toml
zwipe-components/: Cargo.toml  README.md
zwipe-core/: Cargo.toml  README.md
zwiper/: .env.dev  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Entitlements-Release.plist  Entitlements.plist  README.md  build.rs  clippy.toml
(+1716 files in other folders)
