[workspace]
members = ["zerver", "zwiper"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies with unified versions
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
email_address = "0.2.9"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
once_cell = "1.21.3"
dotenvy = "0.15"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.47.1", features = ["full"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"