[workspace]
members = ["zerver", "zwiper"]
resolver = "2"

[workspace.lints.clippy]
# Basic quality
redundant_clone = "warn"
needless_borrow = "warn"
unnecessary_to_owned = "warn"

# Unwrap/panic prevention
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Performance/efficiency
needless_range_loop = "warn"
needless_collect = "warn"
inefficient_to_string = "warn"
clone_on_ref_ptr = "warn"
or_fun_call = "warn"
large_enum_variant = "warn"
single_char_pattern = "warn"

# Code quality
too_many_arguments = "warn"
type_complexity = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
# Shared dependencies with unified versions
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
email_address = "0.2.9"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
once_cell = "1.21.3"
dotenvy = "0.15"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.9.2"
sha2 = "0.10.9"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.47.1", features = ["full"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"