[workspace]
members = [
    "zerver",
    "zwiper",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
dotenvy = "0.15"
email_address = "0.2.9"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.reqwest]
version = "0.12.23"
features = ["json"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.47.1"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "serde",
]

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
expect_used = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
needless_borrow = "warn"
needless_collect = "warn"
needless_range_loop = "warn"
or_fun_call = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_clone = "warn"
single_char_pattern = "warn"
todo = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
unnecessary_to_owned = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
unwrap_used = "warn"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"
