[package]
name = "deck-builder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
sqlx-macros = "0.8"  
uuid = { version = "1.0", features = ["v4", "serde"] }

# Helps convert to sql string
strum = { version = "0.24", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }

# HTTP client (for MTG API)
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"
thiserror = "2.0.12"
urlencoding = "2.1.3"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from", "from_str", "into_iterator"] }
itertools = "0.14.0"
email_address = "0.2.9"

[dev-dependencies]
# Testing
