[package]
name = "zwipe"
version = "0.1.0"
edition = "2021"

[features]
default = ["zerver"]
zerver = ["axum", "axum-extra", "tower", "tower-http", "tokio", "sqlx", "sqlx-macros", "strum", "jsonwebtoken", "argon2", "tracing", "tracing-subscriber", "urlencoding", "derive_more", "itertools"]

[lib]
name = "zwipe"
path = "src/lib/lib.rs"

[[bin]]
name = "zerver"
path = "src/bin/zerver/main.rs"

[[bin]]
name = "zervice"
path = "src/bin/zervice/main.rs"

[dependencies]

# Server-only dependencies (optional)
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], optional = true }
sqlx-macros = { version = "0.8", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
urlencoding = { version = "2.1.3", optional = true }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from", "from_str", "into_iterator"], optional = true }
itertools = { version = "0.14.0", optional = true }

# Shared dependencies (always available)
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
email_address = "0.2.9"
dotenvy = "0.15"
once_cell = "1.21.3"
sha2 = "0.10.9"
rand = "0.9.2"
hex = "0.4.3"
reqwest = { version = "0.12.23", features = ["json"] }


