[package]
name = "zwipe"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[features]
default = ["zerver"]
zerver = ["axum", "axum-extra", "tower", "tower-http", "tokio", "sqlx", "sqlx-macros", "strum", "jsonwebtoken", "argon2", "urlencoding", "derive_more", "itertools"]

[lib]
name = "zwipe"
path = "src/lib/lib.rs"

[[bin]]
name = "zerver"
path = "src/bin/zerver/main.rs"

[[bin]]
name = "zervice"
path = "src/bin/zervice/main.rs"

[dependencies]

# Server-only dependencies (optional)
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio = { workspace = true, optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], optional = true }
sqlx-macros = { version = "0.8", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
urlencoding = { version = "2.1.3", optional = true }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from", "from_str", "into_iterator"], optional = true }
itertools = { version = "0.14.0", optional = true }

# Shared dependencies (always available)
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
email_address = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }


