[package]
name = "zite"
version.workspace = true
authors = ["scottyrayfermo"]
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "zite"
path = "src/main.rs"

[dependencies]
zwipe-core = { path = "../zwipe-core" }
dioxus = { version = "0.7.4", features = ["router", "web"] }
serde = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Document", "Element"] }

# Local declaration — workspace reqwest has rustls-tls which doesn't compile to wasm32
reqwest = { version = "0.12", features = ["json"], default-features = false }

# getrandom 0.4+ requires explicit wasm_js feature for wasm32-unknown-unknown
getrandom = { version = "0.4", features = ["wasm_js"] }
