[package]
name = "zweb"
version.workspace = true
authors = ["scottyrayfermo"]
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "zweb"
path = "src/main.rs"

[dependencies]
zwipe-core = { path = "../zwipe-core" }
dioxus = { version = "0.7.4", features = ["router", "web"] }
serde = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams", "Document", "Element"] }

# Local declaration — workspace reqwest has rustls-tls which doesn't compile to wasm32
reqwest = { version = "0.12", features = ["json"], default-features = false }
