[package]
name = "zwipe-components"
version.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Dioxus with its default features (macro/html/signals/hooks) but NO platform
# feature — each consuming app (zwiper, zite) enables its own web/mobile/
# fullstack, and cargo unifies; sharing components must not force a platform.
dioxus = { version = "0.7.9" }
uuid.workspace = true
zwipe-core = { path = "../zwipe-core" }
