[package]
name = "zwipe-core"
version.workspace = true
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
email_address = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
