[package]
name = "zwipe-core"
version.workspace = true
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
email_address = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
rand = { workspace = true }
regex = "1"
thiserror = { workspace = true }
uuid = { workspace = true }
