[package]
name = "zwipe"
version = "0.1.0"
edition = "2021"

[features]
default = ["zerver"]
zerver = ["axum", "axum-extra", "tower", "tower-http", "tokio", "sqlx", "sqlx-macros", "strum", "jsonwebtoken", "argon2", "reqwest", "tracing", "tracing-subscriber", "dotenvy", "urlencoding", "derive_more", "itertools"]

[lib]
name = "zwipe"
path = "src/lib/lib.rs"

[[bin]]
name = "zerver"
path = "src/bin/server/main.rs"

[[bin]]
name = "zync"
path = "src/bin/sync/main.rs"

[[bin]]
name = "zync-one"
path = "src/bin/zync-one/main.rs"

[dependencies]

# Server-only dependencies (optional)
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"], optional = true }
sqlx-macros = { version = "0.8", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
dotenvy = { version = "0.15", optional = true }
urlencoding = { version = "2.1.3", optional = true }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from", "from_str", "into_iterator"], optional = true }
itertools = { version = "0.14.0", optional = true }
once_cell = { version = "1.21.3", optional = true }

# Shared dependencies (always available)
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.12"
email_address = "0.2.9"
