[package]
name = "zwiper"
version = "0.1.0"
authors = ["scottyrayfermo"]
edition = "2021"

[lib]
name = "zwiper"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zwipe = { path = "../zerver", default-features = false }
dioxus = { version = "0.7.0", features = ["router"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
email_address = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
keyring = { version = "3", features = ["apple-native"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
