[package]
name = "zwiper"
version.workspace = true
authors = ["scottyrayfermo"]
edition = "2024"

[lints]
workspace = true

[lib]
name = "zwiper"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerver = { path = "../zerver", default-features = false }
zwipe-core = { path = "../zwipe-core" }
dioxus = { version = "0.7.9", features = ["router"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
email_address = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
keyring = { version = "3", features = ["apple-native"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "02801f27e4b3e30606e5c77e435c9d955c708eb3", version = "0.0.1", default-features = false }

# Android-only: keyring has no Android backend, so we persist the session to a
# file in the app's private internal storage, reached via JNI (Context.getFilesDir()).
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"

[build-dependencies]
dotenvy = { workspace = true }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
