[package]
name = "zwiper"
version.workspace = true
authors = ["scottyrayfermo"]
edition = "2024"

[lints]
workspace = true

[lib]
name = "zwiper"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerver = { path = "../zerver", default-features = false }
zwipe-core = { path = "../zwipe-core" }
dioxus = { version = "0.7.9", features = ["router"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
email_address = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
dotenvy = { workspace = true }
keyring = { version = "3", features = ["apple-native"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "02801f27e4b3e30606e5c77e435c9d955c708eb3", version = "0.0.1", default-features = false }

# Android-only: keyring has no Android backend, so we persist the session to a
# file in the app's private internal storage, reached via JNI (Context.getFilesDir()).
# JNI + ndk-context also back `open_url` (ACTION_VIEW intents).
[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1"
jni = "0.21"

# iOS-only: `open_url` opens mailto:/http links via UIApplication.openURL, since
# the webview's webbrowser backend rejects non-http(s) URLs on mobile.
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSURL", "NSDictionary"] }

# Desktop (dev) only: webbrowser is pulled transitively by dioxus-desktop; depend
# on it directly so `open_url` can hand off mailto:/http on macOS/Windows/Linux.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
webbrowser = "1"

[build-dependencies]
dotenvy = { workspace = true }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
